--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Our Cool Game Name</title>
+  <meta name="author" content="5 Horsemen Games">
+  <meta name="description" content="We are a group of 5 guys making a game for our INF 125 class">
+  <meta name="keywords" content="UCI, space, AI, rogue-like, story game">
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
+  <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <style type="text/css">
     body {
-      background-color: black; 
+      background-color: black;
     }
   </style>
   </head>
   <body>
+    <div id='stars'><div>
+    <div id='stars2'><div>
+    <div id='stars3'><div>
+    <div id='title'>
+      <span> Cool Game Title </span>
+      <br>
+      <span> <h2> this can be a description of the game </h2>  </span>
+
+    </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
   <script type="text/javascript">
    function autorun()
    {
