--- a/index.html
+++ b/index.html
@@ -6,36 +6,27 @@
   <meta name="author" content="5 Horsemen Games">
   <meta name="description" content="We are a group of 5 guys making a game for our INF 125 class">
   <meta name="keywords" content="UCI, space, AI, rogue-like, story game">
+  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel='stylesheet' href='//fonts.googleapis.com/css?family=font1|font2|etc' type='text/css'>
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
   <style type="text/css">
     body {
-      background-color: black;
+      height: 100%;
     }
   </style>
   </head>
   <body>
-    <div id='stars'><div>
-    <div id='stars2'><div>
-    <div id='stars3'><div>
     <div id='title'>
-      <span> Cool Game Title </span>
+      <span>
+        S.A.I.R.L
+      </span>
       <br>
-      <span> <h2> this can be a description of the game </h2>  </span>
-
+      <h6>
+        This Game Is Cool, You Should Play It!
+      </h6>
     </div>
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js" type="text/javascript"></script>
-  <script type="text/javascript">
-   function autorun()
-   {
-
-   }
-   if (window.addEventListener) window.addEventListener("load", autorun, false);
-   else if (window.attachEvent) window.attachEvent("onload", autorun);
-   else window.onload = autorun;
-  </script>
+    <div id='stars'></div>
+    <div id='stars2'></div>
+    <div id='stars3'></div>
   </body>
 </html>
