fixed name and added a cool glow font effect

--- a/index.html
+++ b/index.html
@@ -6,24 +6,21 @@
   <meta name="author" content="5 Horsemen Games">
   <meta name="description" content="We are a group of 5 guys making a game for our INF 125 class">
   <meta name="keywords" content="UCI, space, AI, rogue-like, story game">
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+  <!--<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>-->
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
   <style type="text/css">
-    body {
-      height: 100%;
-    }
   </style>
   </head>
   <body>
-    <div id='title'>
-      <span>
-        S.A.I.R.L
+    <div id='title' style='overflow-y: scroll; height: 100% '>
+      <span class="glow">
+        SinguLarry
       </span>
       <br>
-      <h6>
-        This Game Is Cool, You Should Play It!
-      </h6>
+      <h6 class='glow'>Become The Machine!</h6>
+      <i class="fa fa-rocket glow" aria-hidden="true"></i>
     </div>
     <div id='stars'></div>
     <div id='stars2'></div>
