make the site scrollable

--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
   </style>
   </head>
   <body>
-    <div id='title' style='overflow-y: scroll; height: 100% '>
-      <span class="glow">
-        SinguLarry
-      </span>
-      <br>
-      <h6 class='glow'>Become The Machine!</h6>
-      <i class="fa fa-rocket glow" aria-hidden="true"></i>
+    <!--<ul class="topnav" id="myTopnav">-->
+      <!--<li><a href="#Story" >Story</a></li>-->
+      <!--<li><a href="#Game">Gameplay</a></li>-->
+      <!--<li><a href="#about">About</a></li>-->
+      <!--<li><a href="#developers">Developers</a></li>-->
+      <!--<li class="icon">-->
+        <!--<a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>-->
+      <!--</li>-->
+    </ul>
+    <a href='#'>
+      <div id='title' style='overflow-y: scroll; height: 100% '>
+        <span class="glow">
+          SinguLarry
+        </span>
+        <br>
+        <h6 class='glow'>Become The Machine!</h6>
+        <i class="fa fa-rocket glow" aria-hidden="true"></i>
+    </a>
     </div>
     <div id='stars'></div>
     <div id='stars2'></div>
