fixed menu and added all pages

--- a/developers.html
+++ b/developers.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>SinguLarry</title>
+    <title>Developers|SinguLarry</title>
   <meta name="author" content="5 Horsemen Games">
   <meta name="description" content="We are a group of 5 guys making a game for our INF 125 class">
   <meta name="keywords" content="UCI, space, AI, rogue-like, story game">
@@ -16,18 +16,25 @@
     <div id='stars'></div>
     <div id='stars2'></div>
     <div id='stars3'></div>
-    <div id="header">
-      <span class="glow">
-        SinguLarry
-      </span>
-      <h6 class='glow'>Become The Machine!</h6>
-      <i class="fa fa-rocket glow" aria-hidden="true"></i>
-    </div>
+    <a href='index.html'>
+      <div id="header">
+        <span class="glow">
+          SinguLarry
+        </span>
+        <h6 class='glow'>Become The Machine!</h6>
+        <i class="fa fa-rocket glow" aria-hidden="true"></i>
+      </div>
+    </a>
     <ul class="topnav glow" id="myTopnav">
       <li id="story"><a href="story.html" >Story</a></li>
       <li id="game"><a href="game.html">Gameplay</a></li>
-      <li id="about"><a href="about.html">About</a></li>
-      <li id="developers"><a href="developers.html">Developers</a></li>
+			<li id="about"><a href="about.html">About</a></li>
+      <li id="current">Developers</li>
     </ul>
+    <div id="content">
+			<h1> The 5 Horsemen </h1>
+			<p>
+			</p>
+    </div>
   </body>
 </html>
