finally centered things and properly sized things for multiple screen sizes

--- a/developers.html
+++ b/developers.html
@@ -33,8 +33,22 @@
     </ul>
     <div id="content">
 			<h1> The 5 Horsemen </h1>
-			<p>
-			</p>
+			<h2>Cody Sauer</h2>
+			<p><strong>Roles:</strong></p>
+			<p><strong>Bio:</strong></p>
+			<h2>Daniel Thompson</h2>
+			<p><strong>Roles:</strong></p>
+			<p><strong>Bio:</strong></p>
+			<h2>Daniel Tromberg</h2>
+			<p><strong>Roles:</strong></p>
+			<p><strong>Bio:</strong></p>
+			<h2>Kyle San Clemente</h2>
+			<p><img class="bio-image" src="Images/KyleSanClemente.jpg" ></p>
+			<p><strong>Roles:</strong> Producer, Web Developer</p>
+			<p><strong>Bio:</strong> UCI Sr. Majoring in Software Engineering, and Project Manager for Oomba Inc. Enjoys Linux and Vim, and backpacking.</p>
+			<h2>Raj Parpani</h2>
+			<p><strong>Roles:</strong></p>
+			<p><strong>Bio:</strong></p>
     </div>
   </body>
 </html>
