--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h6 class='glow'>Become The Machine!</h6>
       <i class="fa fa-rocket glow" aria-hidden="true"></i>
     </div>
-    <ul class="topnav glow" id="myTopnav">
+    <ul class="topnav center glow" id="myTopnav">
       <li id="story"><a href="story.html" >Story</a></li>
       <li id="game"><a href="game.html">Gameplay</a></li>
       <li id="about"><a href="about.html">About</a></li>
