--- a/story.html
+++ b/story.html
@@ -43,7 +43,7 @@
 			</p>
 			<h2>Captain Cornelius</h2>
 			<p>
-			An ex-FBI agent who specialised in the behavioral analysis of criminals. Despite his expertise on the subject, he was never quite able to quell his own vices. He had a gambling addiction that went way out of control. When he found he didn’t have enough money to feed his addiction from his day job, he turned to a life of crime, selling evidence on the side for cash. This lead to his eventual dismissal and arrest. On the ship he leads the others with great charisma, putting his previous knowledge to work on assuaging their mental woes.
+			An ex-FBI agent who specialized in the behavioral analysis of criminals. Despite his expertise on the subject, he was never quite able to quell his own vices. He had a gambling addiction that went way out of control. When he found he didn’t have enough money to feed his addiction from his day job, he turned to a life of crime, selling evidence on the side for cash. This lead to his eventual dismissal and arrest. On the ship he leads the others with great charisma, putting his previous knowledge to work on assuaging their mental woes.
 			</p>
 			<h2>Hugh</h2>
 			<p>
