added a bunch of stuff to the site and cleaned up styles some more

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>About|SinguLarry</title>
+    <title>About | SinguLarry</title>
   <meta name="author" content="5 Horsemen Games">
   <meta name="description" content="We are a group of 5 guys making a game for our INF 125 class">
   <meta name="keywords" content="UCI, space, AI, rogue-like, story game">
@@ -34,9 +34,20 @@
     </ul>
     <div id="content">
 			<h1> Why Did We Make This Game? </h1>
-			<p>
-				We created this game for our Informatics 125 game design class.
+			<h2><span>Class:</span> Informatics 125 Game Development </h2>
+			<p>This game was build as a quarter-long project for our Informatics 125 class, at UC Irvine.Throughout this course we have learned not just how games are created, but how fun games are created. We have applied the lessons taught to us during lecture to our game, in an attempt to make a game that won't just get us an A, but will actually be fun to play.
+			<h2><span>Professor:</span>  Darren Denenberg</h2>
+			<img class="bio-image" src="Images/DD.jpg">
+			<p><i>Maximum Brown Nose Mode Engage!</i></p>
+			<p class="para">
+			Dr. Darren Denenberg is a great professor; he lectures on interesting and relevant topics. The sheer awesomeness of the material allows him to not give tests or quizzes, because he knows that everyone in the class will pay attention to the material anyway. He expresses serious passion for games, and has strong feelings about the quality of games. A hero in the gaming community, doing everything in his power to save the world from yet another Candy Crush clone.
 			</p>
+			<h2>Game Showcase</h2>
+			<ul>
+				<li><b>Date:</b> December 6th 2016</li>
+				<li><b>Time:</b> 3pm</li>
+				<li><b>Location:</b> DBH... I think</li>
+			</ul>
     </div>
   </body>
 </html>
