--- a/developers.html
+++ b/developers.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Developers|SinguLarry</title>
+    <title>Developers | SinguLarry</title>
   <meta name="author" content="5 Horsemen Games">
   <meta name="description" content="We are a group of 5 guys making a game for our INF 125 class">
   <meta name="keywords" content="UCI, space, AI, rogue-like, story game">
@@ -35,20 +35,20 @@
 			<h1> The 5 Horsemen </h1>
 			<h2>Cody Sauer</h2>
 			<p><strong>Roles:</strong></p>
-			<p><strong>Bio:</strong></p>
+			<p class="para"><strong>Bio:</strong></p>
 			<h2>Daniel Thompson</h2>
 			<p><strong>Roles:</strong></p>
-			<p><strong>Bio:</strong></p>
+			<p class="para"><strong>Bio:</strong></p>
 			<h2>Daniel Tromberg</h2>
 			<p><strong>Roles:</strong></p>
-			<p><strong>Bio:</strong></p>
+			<p class="para"><strong>Bio:</strong></p>
 			<h2>Kyle San Clemente</h2>
-			<p><img class="bio-image" src="Images/KyleSanClemente.jpg" ></p>
+			<img class="bio-image" src="Images/KyleSanClemente.jpg" >
 			<p><strong>Roles:</strong> Producer, Web Developer</p>
-			<p><strong>Bio:</strong> UCI Sr. Majoring in Software Engineering, and Project Manager for Oomba Inc. Enjoys Linux and Vim, and backpacking.</p>
+			<p class="para"><strong>Bio:</strong> UCI Sr. Majoring in Software Engineering, and Project Manager for Oomba Inc. Enjoys Linux and Vim, and backpacking.</p>
 			<h2>Raj Parpani</h2>
 			<p><strong>Roles:</strong></p>
-			<p><strong>Bio:</strong></p>
+			<p class="para"><strong>Bio:</strong></p>
     </div>
   </body>
 </html>
