--- a/story.html
+++ b/story.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Story|SinguLarry</title>
+    <title>Story | SinguLarry</title>
   <meta name="author" content="5 Horsemen Games">
   <meta name="description" content="We are a group of 5 guys making a game for our INF 125 class">
   <meta name="keywords" content="UCI, space, AI, rogue-like, story game">
@@ -33,36 +33,43 @@
     </ul>
     <div id="content">
 			<h1> Background </h1>
-			<p>
+			<p class="para">
 				Asimov’s Pioneers are a group dedicated to the advancement of robotics and artificial intelligence. With the recent technological achievements in faster than light technology, they are seeking to prove that AI are more relevant than ever to ensure a mortal crew’s survival in the deep reaches of space. As such, they’ve gathered a small group of volunteers to crew the first ever AI controlled ship, The AP Foundation, on a peacekeeping mission to the planet Gliese 581 d, a super-earth terraformed to be habitable to sentient life where many alien species gather. In exchange for their participation on this mission, each of the crew members have been thoroughly rehabilitated and had their slates wiped clean. The AI, Larry, is the most sophisticated of its kind, but still has much to learn through experience.
 			</p>
 			<h1>Characters</h1>
 			<h2>Larry</h2>
-			<p>
+			<img class="character-sprite" src="Images/Larry.gif">
+			<p class="para">
 			The AI and main character that the player assumes control of. It performs most of the technical tasks aboard the ship and progressively gains access to all of the ship’s systems.
 			</p>
 			<h2>Captain Cornelius</h2>
-			<p>
+			<img class="character-sprite" src="Images/Cornelius.png">
+			<p class="para">
 			An ex-FBI agent who specialized in the behavioral analysis of criminals. Despite his expertise on the subject, he was never quite able to quell his own vices. He had a gambling addiction that went way out of control. When he found he didn’t have enough money to feed his addiction from his day job, he turned to a life of crime, selling evidence on the side for cash. This lead to his eventual dismissal and arrest. On the ship he leads the others with great charisma, putting his previous knowledge to work on assuaging their mental woes.
 			</p>
 			<h2>Hugh</h2>
-			<p>
+			<img class="character-sprite" src="Images/Hugh.png">
+			<p class="para">
 			Not many understood Hugh, but not many tried. A depressed veteran and social recluse that eventually snapped, ending several others’ lives in the process. He planned to take his own life, but was stopped by law enforcement and brought to justice. He now works on the ship as its combat expert with a dark sense of humor. In general, he is no longer a risk and repents his dreadful past.
 			</p>
 			<h2>Frank</h2>
-			<p>
+			<img class="character-sprite" src="Images/Frank.png">
+			<p class="para">
 			An MIT graduate with a doctorate in AI and Robotics. Frank was hailed as a prodigy and genius of his time, making many landmark advances in the field. However, one fateful day an experiment went horribly wrong. An AI of his own design went haywire, killing ten research assistants at his lab and severing Frank’s left arm before he was finally able to shut it down. Not able to get work anywhere else, the Asimov Pioneers decided his expertise would prove useful. Frank was the one who designed Larry and as such is responsible for monitoring him on this mission.
 			</p>
 			<h2>Mark</h2>
-			<p>
+			<img class="character-sprite" src="Images/Mark.png">
+			<p class="para">
 			A once prominent surgeon who suffered a psychological breakdown due to his inability to save a close friend at the table. After the incident, his afflicted mental state lead to several cases of malpractice and eventually his termination. With his future professional employment status uncertain, he turned to the Asimov Pioneers to rehabilitate him and provide new opportunities away from his previous failure. He now works closely with AI to perform medical procedures and is the doctor on board The AP Foundation.
 			</p>
 			<h2>Shultz</h2>
-			<p>
+			<img class="character-sprite" src="Images/Shultz.png">
+			<p class="para">
 			An engineer and expert in faster than light technology. Despite his success, he had a strained relationship with his wife that lead him to drink. One day, he came home to his wife with another man in their marital bed and, in a drunken fit of passion, murdered both of them. He was given life in prison, but, not wanting his talents to go to waste, the Asimov Pioneers seized the opportunity to rehabilitate him to assist in the development of The AP Foundation.
 			</p>
 			<h2>Zephyr</h2>
-			<p>
+			<img class="character-sprite" src="Images/Zephyr.png">
+			<p class="para">
 			A brilliaint hacker and thrill-seeker. He started small, gaining entry into security systems just for the pure adrenaline?. Eventually he moved up to corporate espionage when he realized the sheer demand of his skill and massive wealth he could potentially accumulate . Before long greed overtook him and he was auctioning off the national secrets of various countries to the highest bidder. Not sure what to do with him when he was finally caught, since so many countries wanted him dead, the Asimov Pioneers offered him a chance to work on security from the other side. He currently works on board the AP Foundation as the cyberwarfare expert.
 			</p>
     </div>
