added para class to a p tag so the page would look better

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <div id="content">
 			<h1> Why Did We Make This Game? </h1>
 			<h2><span>Class:</span> Informatics 125 Game Development </h2>
-			<p>This game was build as a quarter-long project for our Informatics 125 class, at UC Irvine.Throughout this course we have learned not just how games are created, but how fun games are created. We have applied the lessons taught to us during lecture to our game, in an attempt to make a game that won't just get us an A, but will actually be fun to play.
+			<p class="para">This game was build as a quarter-long project for our Informatics 125 class, at UC Irvine.Throughout this course we have learned not just how games are created, but how fun games are created. We have applied the lessons taught to us during lecture to our game, in an attempt to make a game that won't just get us an A, but will actually be fun to play.
 			<h2><span>Professor:</span>  Darren Denenberg</h2>
 			<img class="bio-image" src="Images/DD.jpg">
 			<p><i>Maximum Brown Nose Mode Engage!</i></p>
