--- a/developers.html
+++ b/developers.html
@@ -34,21 +34,25 @@
     <div id="content">
 			<h1> The 5 Horsemen </h1>
 			<h2>Cody Sauer</h2>
-			<p><strong>Roles:</strong></p>
-			<p class="para"><strong>Bio:</strong></p>
+			<img class="bio-image" src="Images/CodySauer.jpg" >
+			<p><strong>Roles:</strong> Designer, Writer, Programmer</p>
+			<p class="para"><strong>Bio:</strong> UCI Sr. Majoring in Computer Science. Long-time gamer and part-time Dungeon Master. Enjoys C++, sleeping and swimming.</p>
 			<h2>Daniel Thompson</h2>
-			<p><strong>Roles:</strong></p>
-			<p class="para"><strong>Bio:</strong></p>
+			<img class="bio-image" src="Images/DanielThompson.jpg" >
+			<p><strong>Roles:</strong>Game Developer, Artist</p>
+			<p class="para"><strong>Bio:</strong>Dan is a UCI Senior Majoring in Computer Science. He started developing games for fun by coding a Tetris clone and a Pong clone in C++ and SDL.  After building a game engine using the same languages, he honed his art skills with gimp.  He enjoys Linux,  overly complicated board games, and weightlifting.</p>
 			<h2>Daniel Tromberg</h2>
-			<p><strong>Roles:</strong></p>
-			<p class="para"><strong>Bio:</strong></p>
+			<img class="bio-image" src="Images/DanielTromberg.jpg" >
+			<p><strong>Roles:</strong>Artist, Editor</p>
+			<p class="para"><strong>Bio:</strong>UCI Senior majoring in Informatics. He specializes in Human Computer Interaction.</p>
 			<h2>Kyle San Clemente</h2>
 			<img class="bio-image" src="Images/KyleSanClemente.jpg" >
 			<p><strong>Roles:</strong> Producer, Web Developer</p>
 			<p class="para"><strong>Bio:</strong> UCI Sr. Majoring in Software Engineering, and Project Manager for Oomba Inc. Enjoys Linux and Vim, and backpacking.</p>
 			<h2>Raj Parpani</h2>
+			<img class="bio-image" src="Images/RajParpani.jpg" >
 			<p><strong>Roles:</strong></p>
-			<p class="para"><strong>Bio:</strong></p>
+			<p class="para"><strong>Bio:</strong>  I am currently pursuing a Bachelor’s degree in Informatics with specialization in HCI [HUMAN COMPUTER INTERACTION] from the University of California, Irvine. Completing this game project allows me to add extra bits of creative work to my portfolio. Acquiring the opportunity to be a part of the game development class has helped me not only get some knowledge about the programming aspect of making games  but as well as the general principles to be looked for in terms of writing a storyline for the game.. My passion for gaming gave me a strong desire to learn all the new tools I needed to learn for creating this game with my group..I was able to demonstrate some creative ideas in terms of art while making assets from a top down perspective. My extensive experience working on so many projects throughout the program helped me keep myself in pace with the agile process followed for our project really well. I hope you’d like the game our team created for your game development class. </p>
     </div>
   </body>
 </html>
