added downloads, still need content, and did a bit more clean up

--- a/about.html
+++ b/about.html
@@ -40,13 +40,19 @@
 			<img class="bio-image" src="Images/DD.jpg">
 			<p><i>Maximum Brown Nose Mode Engage!</i></p>
 			<p class="para">
-			Dr. Darren Denenberg is a great professor; he lectures on interesting and relevant topics. The sheer awesomeness of the material allows him to not give tests or quizzes, because he knows that everyone in the class will pay attention to the material anyway. He expresses serious passion for games, and has strong feelings about the quality of games. A hero in the gaming community, doing everything in his power to save the world from yet another Candy Crush clone.
+			Dr. Darren Denenberg is a great professor! His lectures on interesting and relevant topics are always engaging which is a nice change for most students at UCI. The sheer awesomeness of the material allows him to not give tests or quizzes, because he knows that everyone in the class will pay attention to the material even while lacking the academic requirement to memorize it. He expresses serious passion for games, and has strong feelings about the game industry over the years. Darren Denenberg is a hero in the gaming community, doing everything in his power to save the world from yet another Candy Crush clone.
 			</p>
 			<h2>Game Showcase</h2>
 			<ul>
-				<li><b>Date:</b> December 6th 2016</li>
-				<li><b>Time:</b> 3pm</li>
-				<li><b>Location:</b> DBH... I think</li>
+				<li><span>Date:</span> December 6th 2016</li>
+				<li><span>Time:</span> 3pm</li>
+				<li><span>Location:</span> DBH... I think</li>
+			</ul>
+			<p class="para"></p>
+			<h2>Downloads</h2>
+			<ul>
+				<li><a href="DesignDoc.doc"><i class="fa fa-file-text-o" aria-hidden="true"></i> Design Doc</a></li>
+				<li><a href="DesignDoc.doc"><i class="fa fa-rocket" aria-hidden="true"></i> SinguLarry Game</a></li>
 			</ul>
     </div>
   </body>
