--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
     </ul>
     <div id="content">
 			<h1> Why Did We Make This Game? </h1>
-			<h2><span>Class:</span> Informatics 125 Game Development </h2>
-			<p class="para">This game was built as a quarter-long project for our Informatics 125 class, at UC Irvine.Throughout this course we have learned not just how games are created, but how fun games are created. We have applied the lessons taught to us during lecture to our game, in an attempt to make a game that won't just get us an A, but will actually be fun to play.
+			<h2><span>Class:</span> CS 113 / INF 125 – Computer Game Development </h2>
+			<p class="para">This game was built as a quarter-long project for our Informatics 125 class at UC Irvine. Throughout this course we learned not just how to create games, but how to create interesting and engaging games. We applied the lessons taught to us during lecture to our game, in an attempt to make a game that won't just get us an A, but will actually be an enjoyable experience.
 			<h2><span>Professor:</span>  Darren Denenberg</h2>
 			<img class="bio-image" src="Images/DD.jpg">
 			<p><i>Maximum Brown Nose Mode Engage!</i></p>
