--- a/story.html
+++ b/story.html
@@ -70,7 +70,7 @@
 			<h2>Zephyr</h2>
 			<img class="character-sprite" src="Images/Zephyr.png">
 			<p class="para">
-			A brilliaint hacker and thrill-seeker. He started small, gaining entry into security systems just for the pure adrenaline?. Eventually he moved up to corporate espionage when he realized the sheer demand of his skill and massive wealth he could potentially accumulate . Before long greed overtook him and he was auctioning off the national secrets of various countries to the highest bidder. Not sure what to do with him when he was finally caught, since so many countries wanted him dead, the Asimov Pioneers offered him a chance to work on security from the other side. He currently works on board the AP Foundation as the cyberwarfare expert.
+			A brilliaint hacker and thrill-seeker. He started small, gaining entry into security systems just for the adrenaline rush. Eventually he moved up to corporate espionage when he realized the sheer demand of his skill and massive wealth he could potentially accumulate. Before long, greed overtook him and he was auctioning off the national secrets of various countries to the highest bidder. Not sure what to do with him when he was finally caught, since so many countries wanted him dead, the Asimov Pioneers offered him a chance to work on security from the other side. He currently works on board the AP Foundation as the cyberwarfare expert.
 			</p>
     </div>
   </body>
