--- a/story.html
+++ b/story.html
@@ -45,7 +45,7 @@
 			<h2>Captain Cornelius</h2>
 			<img class="character-sprite" src="Images/Cornelius.png">
 			<p class="para">
-			An ex-FBI agent who specialized in the behavioral analysis of criminals. Despite his expertise on the subject, he was never quite able to quell his own vices. He had a gambling addiction that went way out of control. When he found he didn’t have enough money to feed his addiction from his day job, he turned to a life of crime, selling evidence on the side for cash. This lead to his eventual dismissal and arrest. On the ship he leads the others with great charisma, putting his previous knowledge to work on assuaging their mental woes.
+			An ex-FBI agent who specialized in the behavioral analysis of criminals. Despite his expertise on the subject, he was never quite able to quell his own vices. He had a gambling addiction that spiraled out of control. When he found he didn’t have enough money to feed his addiction from his day job, he turned to a life of crime, selling evidence on the side for cash. This lead to his eventual dismissal and arrest. On the ship he leads the others with great charisma, putting his previous knowledge to work on assuaging their mental woes.
 			</p>
 			<h2>Hugh</h2>
 			<img class="character-sprite" src="Images/Hugh.png">
@@ -60,12 +60,12 @@
 			<h2>Mark</h2>
 			<img class="character-sprite" src="Images/Mark.png">
 			<p class="para">
-			A once prominent surgeon who suffered a psychological breakdown due to his inability to save a close friend at the table. After the incident, his afflicted mental state lead to several cases of malpractice and eventually his termination. With his future professional employment status uncertain, he turned to the Asimov Pioneers to rehabilitate him and provide new opportunities away from his previous failure. He now works closely with AI to perform medical procedures and is the doctor on board The AP Foundation.
+			A once prominent surgeon who suffered a psychological breakdown due to his inability to save a close friend at the table. After the incident, his afflicted mental state lead to several cases of malpractice and eventually his termination. With his future professional employment status uncertain, he turned to the Asimov Pioneers to rehabilitate him and provide new opportunities away from his previous nightmares. He now works closely with AI to perform medical procedures and is the doctor on board The AP Foundation.
 			</p>
 			<h2>Shultz</h2>
 			<img class="character-sprite" src="Images/Shultz.png">
 			<p class="para">
-			An engineer and expert in faster than light technology. Despite his success, he had a strained relationship with his wife that lead him to drink. One day, he came home to his wife with another man in their marital bed and, in a drunken fit of passion, murdered both of them. He was given life in prison, but, not wanting his talents to go to waste, the Asimov Pioneers seized the opportunity to rehabilitate him to assist in the development of The AP Foundation.
+			An engineer and expert in faster than light technology. Despite his success, he had a strained relationship with his wife that lead him to drink. One day, he came home to see his wife with another man in their marital bed, and in a drunken fit of passion, murdered both of them. He was given life in prison, but, not wanting his talents to go to waste, the Asimov Pioneers seized the opportunity to rehabilitate him to assist in the development of The AP Foundation.
 			</p>
 			<h2>Zephyr</h2>
 			<img class="character-sprite" src="Images/Zephyr.png">
