--- a/developers.html
+++ b/developers.html
@@ -52,7 +52,7 @@
 			<h2>Raj Parpani</h2>
 			<img class="bio-image" src="Images/RajParpani.jpg" >
 			<p><strong>Roles:</strong> Artist</p>
-			<p class="para"><strong>Bio:</strong>  UCI Sr. pursuing a Bachelor’s degree in Informatics with a specialization in Human Computer Interaction. Appreciated the programming, story-writing, and artistic aspects of game-making. Acquiring the opportunity to be a part of the game development class has helped me not only get some knowledge about the programming aspect of making games  but as well as the general principles to be looked for in terms of writing a storyline for the game.. His passion for gaming gave him a strong desire to learn all the new tools he needed to learn for creating this game with his team..I was able to demonstrate some creative ideas in terms of art while making assets from a top down perspective. My extensive experience working on so many projects throughout the program helped me keep myself in pace with the agile process followed for our project really well. I hope you’d like the game our team created for your game development class. </p>
+			<p class="para"><strong>Bio:</strong>  UCI Sr. pursuing a Bachelor’s degree in Informatics with a specialization in Human Computer Interaction. His passion for gaming gave him a strong desire to learn all the new tools he needed to learn for creating this game with his team. He enjoyed demonstrating  creative ideas in terms of art while making assets from a top down perspective. </p>
     </div>
   </body>
 </html>
