--- a/developers.html
+++ b/developers.html
@@ -40,7 +40,7 @@
 			<h2>Daniel Thompson</h2>
 			<img class="bio-image" src="Images/DanielThompson.jpg" >
 			<p><strong>Roles:</strong> Game Developer, Artist</p>
-			<p class="para"><strong>Bio:</strong> Dan is a UCI Senior Majoring in Computer Science. He started developing games for fun by coding a Tetris clone and a Pong clone in C++ and SDL.  After building a game engine using the same languages, he honed his art skills with gimp.  He enjoys Linux,  overly complicated board games, and weightlifting.</p>
+			<p class="para"><strong>Bio:</strong> A UCI Senior Majoring in Computer Science. He started developing games for fun by coding a Tetris clone and a Pong clone in C++ and SDL.  After building a game engine using the same languages, he honed his art skills with gimp.  He enjoys Linux,  overly complicated board games, and weightlifting.</p>
 			<h2>Daniel Tromberg</h2>
 			<img class="bio-image" src="Images/DanielTromberg.jpg" >
 			<p><strong>Roles:</strong> Artist, Editor</p>
