--- a/story.html
+++ b/story.html
@@ -65,7 +65,7 @@
 			<h2>Shultz</h2>
 			<img class="character-sprite" src="Images/Shultz.png">
 			<p class="para">
-			An engineer and expert in faster than light technology. Despite his success, he had a strained relationship with his wife that lead him to drink. One day, he came home to see his wife with another man in their marital bed, and in a drunken fit of passion, murdered both of them. He was given life in prison, but, not wanting his talents to go to waste, the Asimov Pioneers seized the opportunity to rehabilitate him to assist in the development of The AP Foundation.
+			An engineer and expert in faster than light technology. Despite his success, he had a strained relationship with his wife that lead him to drink. One day, he came home to see his wife with another man in their marital bed, and in a drunken fit of passion, murdered both of them. He was given life in prison, but, not wanting his unique talents to go to waste, the Asimov Pioneers seized the opportunity to rehabilitate him to assist in the development of The AP Foundation.
 			</p>
 			<h2>Zephyr</h2>
 			<img class="character-sprite" src="Images/Zephyr.png">
