--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
     <div id="content">
 			<h1>Controls</h1>
 			<p>Select Drone - “d”</p>
-			<p>Select Room/Select Option/Move Drone(once selected) - LMB</p>
+			<p>Select Room/Select Option/Move Drone (once selected) - LMB</p>
 			<h1>Basic Mechanics</h1>
 			<h2>Room Control</h2>
 			<p>Clicking on a room that the AI has control of should display all options currently available for that room.</p>
@@ -47,7 +47,7 @@
 			<h2>Air Level</h2>
 			<p>The oxygen levels of specific rooms is adjustable. Low oxygen levels are potentially fatal.</p>
 			<h2>Temperature</h2>
-			<p>The temperature of specific rooms is adjustable. Temperatures too cold or hot are potentially fatal.</p>
+			<p>The temperature of specific rooms is adjustable. Temperatures too hot or too cold are potentially fatal.</p>
 			<h2>Lights</h2>
 			<p>Lights can be turned on and off for any specific room. Rooms without light may make it difficult for life forms to see.</p>
 			<h2>Doors</h2>
