--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
 			<h2>Game Showcase</h2>
 			<ul>
 				<li><span>Date:</span> December 6th 2016</li>
-				<li><span>Time:</span> 3pm</li>
-				<li><span>Location:</span> DBH... I think</li>
+				<li><span>Time:</span> 1:00 – 3:00 PM </li>
+				<li><span>Location:</span> Donald Bren Hall 5011 and 5th floor lobby </li>
 			</ul>
 			<p class="para"></p>
 			<h2>Downloads</h2>
