--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 			<img class="bio-image" src="Images/DD.jpg">
 			<p><i>Maximum Brown Nose Mode Engage!</i></p>
 			<p class="para">
-			Dr. Darren Denenberg is a great professor! His lectures on interesting and relevant topics are always engaging which is a nice change for most students at UCI. The sheer awesomeness of the material allows him to not give tests or quizzes, because he knows that everyone in the class will pay attention to the material even while lacking the academic requirement to memorize it. He expresses serious passion for games, and has strong feelings about the game industry over the years. Darren Denenberg is a hero in the gaming community, doing everything in his power to save the world from yet another Candy Crush clone.
+			Dr. Darren Denenberg is an excellent professor! His lectures on interesting and relevant gaming topics are always engaging which is a nice change of pace for most students at UCI. He expresses serious passion for games, and has a strong, insightful knowledge about the game industry over the years. Darren Denenberg is a hero in the gaming community, doing everything in his power to save the world from yet another Candy Crush clone.
 			</p>
 			<h2>Game Showcase</h2>
 			<ul>
